# coolbin

./: Cargo.toml  Dockerfile  tailwind.config.js
src/: main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  templates.rs
templates/: chart.html  chart_landing_template.html  index.html  options_fragment.html  output.css  select_fragment.html
tests/api/: helpers.rs
