[package]
name = "coolbin"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]] 
path = "src/main.rs"
name = "coolbin"

[dependencies]
askama = "0.12.0"
axum = "0.6.18"
axum-sessions = "0.5.0"

config = "0.13.3"
hyper = "0.14.26"

reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"

tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tower-request-id = "0.2.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
htmx-types = {git= "https://github.com/1024bees/htmx-types", branch="main"}
axum-macros = "0.3.7"

[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]


[dev-dependencies]
once_cell = "1.17.1"
wiremock = "0.5.18"
